Bug 1326779 - [e10s] Fire beforeunload event when navigating to a page in different process. r=smaug